--- a/assets/pokeprojeto.html
+++ b/assets/pokeprojeto.html
@@ -28,11 +28,18 @@
             </ol>
             
 
-            <div class="pagination">
-                <button id="LoadMoreButton" type="button">
-                    Load More
-                </button>
-            </div>
+            <div class="buttons">
+                <div class="pagination">
+                    <button id="LoadMoreButton" type="button">
+                        Load More
+                    </button>
+                </div>
+                <div class="pagination2">
+                    <button id="LoadLessItens">
+                        Refresh
+                    </button>
+                </div>
+            </div>   
             
 
     </section>
